# hello-webxr-rs

./: Makefile  README.md
.github/workflows/: README.md  deploy.yaml
app-web/: .firebaserc  .gitignore  Cargo.toml  app.js  index.js  package.json  webpack.config.js
app-web/public/: index.html  style.css
app-web/shader/: vs.vert
app-web/src/: lib.rs  utils.rs
app-web/src/utils/: array.rs  logs.rs  mod.rs
app-web/src/webgl/: buffer.rs  mod.rs  program.rs  webgl.rs
app-web/src/webxr/: mod.rs  webxr.rs
tools/: .env  docker-compose-tools.yaml  docker-compose.yaml
tools/docker/wasm-rs/: Dockerfile
