[package]
name = "app-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.58"
mat4 = "0.2.1"
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.31"

[dependencies.web-sys]
version = "0.3.58"
features = [
    'console',
    'Document',
    'EventTarget',
    'HtmlCanvasElement',
    'MouseEvent',
    'Navigator',
    'WebGl2RenderingContext',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window',
    'XrFrame',
    'XrRenderStateInit',
    'XrSession',
    'XrSessionMode',
    'XrSystem',
    'XrWebGlLayer',
]
